# Avestan-Text-Processing-Suite

./: .gitignore  .gitmodules  .tool-versions  ARCHITECTURE.md  ARCHIVE_ANALYSIS.md  CITATION.cff  COLAB_INSTRUCTIONS.md  EXPERIMENTAL_CODE.md  LICENSE  Makefile  README.md  Taskfile.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
Applying_OCR/: Overview.md  README.md
apparatus/: README.md
apparatus/meta/: 0005.persist.meta.json  0006.persist.meta.json  0008.persist.meta.json  0015.persist.meta.json  0015_with_types_test.classify.meta.json  0088.persist.meta.json  0110.persist.meta.json  0231.persist.meta.json  0234.persist.meta.json  0235.persist.meta.json  0400.persist.meta.json  0410.persist.meta.json  0500.persist.meta.json  0510.persist.meta.json  0672.persist.meta.json  0677.persist.meta.json  2000.persist.meta.json  2007.persist.meta.json  2010.persist.meta.json  2030.persist.meta.json  2040.persist.meta.json  2065.persist.meta.json  2070.persist.meta.json  2101.persist.meta.json  VOWEL_RULES_SUMMARY.md  ab_id_remap.yaml  apparatus_0005.apparatus.meta.json  apparatus_0006.apparatus.meta.json  apparatus_0008.apparatus.meta.json  apparatus_0015.apparatus.meta.json  apparatus_0088.apparatus.meta.json  apparatus_0110.apparatus.meta.json  apparatus_0231.apparatus.meta.json  apparatus_0234.apparatus.meta.json  apparatus_0235.apparatus.meta.json  apparatus_0400.apparatus.meta.json  apparatus_0410.apparatus.meta.json  apparatus_0500.apparatus.meta.json  apparatus_0510.apparatus.meta.json  apparatus_0672.apparatus.meta.json  (+104 more)
apparatus/policies/: classification_policy.yaml
apparatus/scripts/: fix_specific_alignments.py  tag_apparatus.py  tei_annotation_summary.py  tei_build_multi_view.py
applying_OCR/: README.md
applying_ocr/: Makefile  Overview.md  README.md
archive/: README.md
cab/: cab_text.py
colab_ocr_package/: GUIDE_OCR_to_TEI.docx  Kraken_ALTO_OCR_Colab_PROJECTS_TRAINER.ipynb  mirror_images_colab.ipynb  xml_translator_colab_canonical_dup_tolerant.ipynb
escriptorium/: ocr_xml.py
pahlavi/: mackenzie_cleaner.py
scripts/: apply_dp_to_flagged.py  compare_greedy_dp_word_matches.py  dp_dryrun.py  persist_alignments.py  run_auto_labeling.sh
src/: README.md
(+228 files in other folders)
