[project]
name = "OCR"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "kraken==5.2.9",
    "levenshtein==0.27.1",
    "lxml==5.3.1",
    "nltk==3.9.1",
    "pandas==2.2",
    "pillow==11.1.0",
    "scipy>=1.10.0,<1.11.dev0",
    "seaborn==0.13.2",
]
