[project]
name = "OCR"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

################################################################################
# Poetry configuration
################################################################################

[tool.poetry]
name = "avestan-text-processing-suite"
version = "0.1.0"
description = "End-to-end pipeline for Avestan manuscript processing: OCR via transfer learning and rule-based critical apparatus construction"
authors = ["Nikta Yekrang Safakar <niktaayekrang@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Nikyek/avestan-text-processing-suite"
repository = "https://github.com/Nikyek/avestan-text-processing-suite"
documentation = "https://github.com/Nikyek/avestan-text-processing-suite/blob/main/README.md"
keywords = ["Avestan", "OCR", "critical apparatus", "digital philology", "low-resource languages"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
nltk = "^3.9.3"
lxml = "^5.3.1"
kraken = "^5.3.0"
pillow = "^11.1.0"
levenshtein = "^0.27.1"
seaborn = "^0.13.2"
pandas = "^2.2"
scipy = ">=1.13,<1.14"
